--- a/index/download/medicine.html
+++ b/index/download/medicine.html
@@ -57,26 +57,27 @@
               <a href="download.html">下载专区</a>
               <br class="h_br">
               ·
-              <a href="download.html">本科生人才培养</a>
+              <a href="download.html">医学院本科教学</a>
             </div>
           </td>
         </tr></tbody>
       </table>
 
       <div class="scrollmenu">
-        <a href="download.html" class="active">本科生人才培养</a>
+        <a href="download.html" >本科生人才培养</a>
         <a href="chart.html">常用表格下载</a>
-        <a href="medicine.html">医学院本科教学</a>
+        <a href="medicine.html" class="active">医学院本科教学</a>
       </div>
       <hr>
       
       <div class="cardBox">
         <div class="download-menu"><ul>
-          <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" target="_blank" >【置顶】培养方案下载</a></li>
-          <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF/%E6%95%99%E5%AD%A6%E7%9B%B8%E5%85%B3%E6%A8%A1%E6%9D%BF%E4%B8%8B%E8%BD%BD/%E6%9C%AC%E7%A7%91%E7%94%9F%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8%E6%A8%A1%E6%9D%BF.xlsx" target="_blank" >【学生事务】本科生学期课表模板</a></li>
-          <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/03%20%E8%80%83%E8%AF%95%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%E5%8F%8A%E7%AD%94%E9%A2%98%E5%8D%A1/%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%EF%BC%88A3%E6%9C%80%E6%96%B0%EF%BC%89.docx" target="_blank" >【教学事务】A3试卷模板</a></li>
-          <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/03%20%E8%80%83%E8%AF%95%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%E5%8F%8A%E7%AD%94%E9%A2%98%E5%8D%A1/A4%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF.docx" target="_blank" >【教学事务】A4试卷模板</a></li>
-          <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/03%20%E8%80%83%E8%AF%95%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%E5%8F%8A%E7%AD%94%E9%A2%98%E5%8D%A1/01%20%E7%AD%94%E9%A2%98%E5%8D%A1/%E8%80%83%E7%A0%94%E7%AD%94%E9%A2%98%E5%8D%A1%E6%A0%87%E5%87%86%E7%89%88%EF%BC%88%E7%BC%BA408%E7%AD%94%E9%A2%98%E5%8D%A11%EF%BC%89.zip" target="_blank" >【教学事务】标准化考试答题卡</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/raw/master/%23%20%E5%90%84%E5%AD%A6%E6%9C%9F%E6%9C%9F%E6%9C%AB%E5%A4%8D%E4%B9%A0%E8%AE%A1%E5%88%92/2022-2023-2%20%E5%8C%BB%E5%AD%A6%E8%AF%BE%E7%A8%8B%E5%A4%8D%E4%B9%A0%E8%AE%A1%E5%88%92.pdf" target="_blank" >【医学院】2022-2023-2 医学课程期末复习总体安排</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM211%20%E7%97%85%E5%8E%9F%E7%94%9F%E7%89%A9%E5%AD%A6" target="_blank" >【医学院】BM211-病原生物学课程资料下载区</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM212%20%E8%8D%AF%E7%90%86%E5%AD%A6%E6%80%BB%E8%AE%BA" target="_blank" >【医学院】BM212-药理学总论课程资料下载区</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM213%20%E9%A2%84%E9%98%B2%E5%8C%BB%E5%AD%A6" target="_blank" >【医学院】BM213-预防医学课程资料下载区</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BE211%20%E7%BB%86%E8%83%9E%E4%B8%8E%E5%88%86%E5%AD%90%E7%94%9F%E7%89%A9%E5%AD%A6%E5%AE%9E%E9%AA%8C" target="_blank" >【医学院】BE211-细胞与分子生物学实验课程资料下载区</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/raw/master/BE211%20%E7%BB%86%E8%83%9E%E4%B8%8E%E5%88%86%E5%AD%90%E7%94%9F%E7%89%A9%E5%AD%A6%E5%AE%9E%E9%AA%8C/%E5%AE%9E%E9%AA%8C%E6%8A%A5%E5%91%8A%E6%A8%A1%E6%9D%BF.docx" target="_blank" >【医学院】BE211-细胞与分子生物学实验实验报告模板下载</a></li>
         </ul></div>
       </div>
 
