--- a/index/download/chart.html
+++ b/index/download/chart.html
@@ -90,7 +90,7 @@
             Copyright &copy; All Rights Reserved <br>
             2023 Computer Science and Medical <br class="h_br">Interdisciplinary Engineering <br>
             <a href="https://computersciencekaoyan.github.io/index/Legal%20Info.html" target="_blank" class="cpy_link">Legal Info</a>&ensp;|&ensp;
-            <a href="https://computersciencekaoyan.github.io/" target="_blank" class="cpy_link">CSMIE</a>
+            <a href="https://computersciencekaoyan.github.io/" class="cpy_link">CSMIE</a>
           </div>
           <div class="cpy_img2">
             <a href="https://computersciencekaoyan.github.io/" style="text-decoration: none;">
