--- a/Online Course/Grades.html
+++ b/Online Course/Grades.html
@@ -22,7 +22,7 @@
 			  <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
 			  	<ul class="layui-nav layui-nav-tree" lay-filter="test">
 					<li class="layui-nav-item">
-						<a href="canvas.html">
+						<a href="e-Course.html">
 							<img  border="0" src="image/MSE.png" class="sidemark">
 						</a>
 					</li>
