--- a/Online Course/e-Course.html
+++ b/Online Course/e-Course.html
@@ -22,7 +22,7 @@
 			  <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
 			  	<ul class="layui-nav layui-nav-tree" lay-filter="test">
 					<li class="layui-nav-item">
-						<a href="canvas.html">
+						<a href="e-Course.html">
 							<img  border="0" src="image/MSE.png" class="sidemark">
 						</a>
 					</li>
@@ -94,7 +94,7 @@
 									<div style="text-align: right;"><a href="2022-2023-1.html"><img src="image/更多1_more-one.png"></a></div>
 									<p><a title="2022-2023-1" style="cursor: pointer; color:white" onclick="viewXmInfo('${var.OMP_XM_ID}');"></a></p>
 								</div>
-								<div class="bodyBox"><a href="2022-2023-1.html">
+								<div class="bodyBox"><a href="Homepage/2022-2023-1.html">
 									<b style="color: #FDC010;">2022-2023 Fall</b><br>Curriculum<br>UG-(2022-2023-1)-CSMIE
 								</a></div>
 							</div>
@@ -105,7 +105,7 @@
 									<div style="text-align: right;"><a href="2022-2023-2.html"><img src="image/更多1_more-one.png"></a></div>
 									<p><a title="2022-2023-2" style="cursor: pointer; color:white" onclick="viewXmInfo('${var.OMP_XM_ID}');"></a></p>
 								</div>
-								<div class="bodyBox"><a href="2022-2023-2.html">
+								<div class="bodyBox"><a href="Homepage/2022-2023-2.html">
 									<b style="color: #09BCD3;">2022-2023 Spring</b><br>Curriculum<br>UG-(2022-2023-2)-CSMIE
 								</a></div>
 							</div>
@@ -115,7 +115,7 @@
 									<div style="text-align: right;"><a href="2022-2023-3.html"><img src="image/更多1_more-one.png"></a></div>
 									<p><a title="2022-2023-2" style="cursor: pointer; color:white" onclick="viewXmInfo('${var.OMP_XM_ID}');"></a></p>
 								</div>
-								<div class="bodyBox"><a href="2022-2023-3.html" >
+								<div class="bodyBox"><a href="Homepage/2022-2023-3.html" >
 									<b style="color: #E71F63;">2022-2023 Summer</b><br>Curriculum<br>UG-(2022-2023-3)-CSMIE
 								</a></div>
 							</div>
