--- a/Quicklink.html
+++ b/Quicklink.html
@@ -95,7 +95,7 @@
           <div class="download_subtitle">课程中心</div>
           <li><a href="https://oc.sjtu.edu.cn/" class="linkpage_reference" target="_blank" >Canvas@SJTU</a></li>
             <li><a href="https://acm.sjtu.edu.cn/wiki/%E8%AF%BE%E7%A8%8B%E4%B8%AD%E5%BF%83" class="linkpage_reference" target="_blank" >ACM课程中心</a></li>
-            <li><a href="https://computersciencekaoyan.github.io/Canvas/canvas.html" class="linkpage_reference" target="_blank" >Canvas@CSMIE</a></li>
+            <li><a href="Login.html" class="linkpage_reference" target="_blank" >e-Course@CSMIE</a></li>
             <li><a href="https://gitee.com/Jinhang_Qiu/Course-Materials" class="linkpage_reference" target="_blank" >CSMIE课程中心</a></li>
         </ul></div>
       </div>
