--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="vertical-menu">
               <a href="Quicklink.html" class="active">友情链接</a>
               <a href="https://mail.sjtu.edu.cn/zimbra/mail#1" target="_blank">Zimbra邮箱</a>
-              <a href="Login.html" target="_blank">Canvas-CS Study</a>
+              <a href="Login.html" target="_blank">e-Course</a>
               <a href="https://gitee.com/Jinhang_Qiu/Course-Materials" target="_blank">课程中心</a>
               <a href="https://oc.sjtu.edu.cn/login/canvas" target="_blank">Canvas-SJTU</a>
               <a href="https://i.sjtu.edu.cn/xtgl/login_slogin.html" target="_blank">教学信息服务网</a>
