--- a/Online Course/Course Structure.html
+++ b/Online Course/Course Structure.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Student Enquiry</title>
+        <title>e-Course</title>
         <link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="CSE-MED">
         <meta http-equiv="pragma" content="no-cache">
