--- a/Online Course/ListView.html
+++ b/Online Course/ListView.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>e-Course Open</title>
+	<title>e-Course</title>
 	<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
