--- a/Login.html
+++ b/Login.html
@@ -60,7 +60,7 @@
 			var i,j;
 			i="123456!";
 			j=document.getElementById("password").value;
-				if(j==i){location.href="  ";}
+				if(j==i){location.href=" https://computersciencekaoyan.github.io/Online%20Course/e-Course ";}
 				else{alert("Password Failed! Please Input Again!");}
 		}
 		</script>
