--- a/Online Course/Homepage/2022-2023-3.html
+++ b/Online Course/Homepage/2022-2023-3.html
@@ -69,7 +69,7 @@
 					<div class="layui-header">
 						<!-- 头部区域（可配合layui 已有的水平导航） -->
 						<ul class="layui-nav layui-layout-left">
-							<a href="#" id="Homepage-title">UG-(2022-2023-2)-Course Overview</div>
+							<a href="#" id="Homepage-title">UG-(2022-2023-3)-Course Overview</div>
 						</ul>
 					</div>
 					<hr class="title-line">
@@ -92,7 +92,8 @@
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Announcement</div></div>
 									<div class="layui-card-body">
-									  	<br>
+										<a href="" target="_blank" class="link">Download 2022-2023-3 School Calender</a><br>
+										<a href="" target="_blank" class="link">Download 2022-2023-3 Examination Schedule</a><br>
 									</div>
 								</div>
 								<div class="layui-card">
@@ -130,12 +131,12 @@
 									</tr></thead>
 									<tbody>
 										<tr class="syllabus-body">
-											<td class="sy-id">Nil</td>
-											<td class="sy-details">Nil</td>
+											<td class="ov-id">CS3311</td>
+											<td class="sy-details">Computer Network</td>
 											<td class="sy-syllabus">Nil</td>
 										</tr>
 										<tr class="syllabus-body">
-											<td class="sy-id">Nil</td>
+											<td class="ov-id">Nil</td>
 											<td class="sy-details">Nil</td>
 											<td class="sy-syllabus">Nil</td>
 										</tr>
