--- a/Online Course/Homepage/2022-2023-2.html
+++ b/Online Course/Homepage/2022-2023-2.html
@@ -92,7 +92,7 @@
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Announcement</div></div>
 									<div class="layui-card-body">
-                                        Please visit<a href="https://computersciencekaoyan.github.io/Canvas/2022-2023-2.html" style="color: #008ee2;"> the Old website(ver1.0)</a><br>
+                                        Please visit<a href="https://computersciencekaoyan.github.io/Canvas/2022-2023-2.html" target="_blank" style="color: #008ee2;"> the Old website(ver1.0)</a><br>
 									</div>
 								</div>
 								<div class="layui-card">
