--- a/Online Course/Homepage/2022-2023-3.html
+++ b/Online Course/Homepage/2022-2023-3.html
@@ -92,7 +92,7 @@
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Announcement</div></div>
 									<div class="layui-card-body">
-										<a href="" target="_blank" class="link">Download 2022-2023-3 School Calender</a><br>
+										<a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/02%20%E5%AD%A6%E6%9C%9F%E6%A0%A1%E5%8E%86/2022-2023-3.pdf" target="_blank" class="link">Download 2022-2023-3 School Calender</a><br>
 										<a href="" target="_blank" class="link">Download 2022-2023-3 Examination Schedule</a><br>
 									</div>
 								</div>
@@ -114,8 +114,73 @@
                                                     <td class="course">CS3311</td>
                                                     <td class="course-title">Computer Network</td>
                                                     <td class="course-type">C</td>
-                                                    <td class="homepage"><a href="CS3311.html" target="_blank">UG-CS3311</a></td>	
+                                                    <td class="homepage"><a href="CS3311.html" target="_blank">CS3311</a></td>	
                                                 </tr>
+
+												<tr class="">
+                                                    <td class="no">2</td>
+                                                    <td class="course">CS2304</td>
+                                                    <td class="course-title">Mathematical Foundations</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="CS2304.html" target="_blank">CS2304</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">3</td>
+                                                    <td class="course">CS5503</td>
+                                                    <td class="course-title">Problem solving and Practice II</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="CS5503.html" target="_blank">CS5503</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">4</td>
+                                                    <td class="course">CS3322</td>
+                                                    <td class="course-title">The Principle of Database Systems</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="CS3322.html" target="_blank">CS3322</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">5</td>
+                                                    <td class="course">CS2308</td>
+                                                    <td class="course-title">Algorithmic Complexity and Design</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="CS2308.html" target="_blank">CS2308</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">6</td>
+                                                    <td class="course">CS3308</td>
+                                                    <td class="course-title">Programming and Machine Learning</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="CS3308.html" target="_blank">CS3308</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">7</td>
+                                                    <td class="course">15-213</td>
+                                                    <td class="course-title">Introduction to Computer System</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="15-213-ICS.html" target="_blank">ICS</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">8</td>
+                                                    <td class="course">MA1203</td>
+                                                    <td class="course-title">Integrated Mathematics</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="MA1203.html" target="_blank">MA1203</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">9</td>
+                                                    <td class="course">FL2304</td>
+                                                    <td class="course-title">College English IV</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage">Nil</td>	
+                                                </tr>
+
                                             </tbody>
                                         </table>
 									</div>
@@ -133,17 +198,53 @@
 										<tr class="syllabus-body">
 											<td class="ov-id">CS3311</td>
 											<td class="sy-details">Computer Network</td>
-											<td class="sy-syllabus">Nil</td>
+											<td class="sy-syllabus"><a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS3311%20Computer%20Network/Course%20Syllabus/CS3311%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.pdf" target="_blank" class="link">CS3311-File</a></td>
 										</tr>
 										<tr class="syllabus-body">
-											<td class="ov-id">Nil</td>
-											<td class="sy-details">Nil</td>
-											<td class="sy-syllabus">Nil</td>
+											<td class="ov-id">CS2304</td>
+											<td class="sy-details">Mathematical Foundations</td>
+											<td class="sy-syllabus"><a href="" target="_blank" class="link">CS2304-File</a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">CS5503</td>
+											<td class="sy-details">Problem solving and Practice II</td>
+											<td class="sy-syllabus"><a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS5503%20Problem%20solving%20and%20Practice%20II/Course%20Syllabus/CS5503%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.pdf" target="_blank" class="link">CS5503-File</a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">CS3322</td>
+											<td class="sy-details">The Principle of Database Systems</td>
+											<td class="sy-syllabus"><a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS3322%20The%20Principle%20of%20Database%20Systems/Course%20Syllabus/CS3322%E6%95%99%E5%AD%A6%E5%A4%A7%E7%BA%B2.pdf" target="_blank" class="link">CS3322-File</a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">CS2308</td>
+											<td class="sy-details">Algorithmic Complexity and Design</td>
+											<td class="sy-syllabus"><a href="" target="_blank" class="link"></a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">CS3308</td>
+											<td class="sy-details">Programming and Machine Learning</td>
+											<td class="sy-syllabus"><a href="" target="_blank" class="link"></a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">15-213</td>
+											<td class="sy-details">Introduction to Computer System</td>
+											<td class="sy-syllabus"><a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/15-213%20Introduction%20to%20Computer%20Systems/15-213.pdf" target="_blank" class="link">ics-File</a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">MA1203</td>
+											<td class="sy-details">Integrated Mathematics</td>
+											<td class="sy-syllabus"><a href="" target="_blank" class="link"></a></td>
+										</tr>
+										<tr class="syllabus-body">
+											<td class="ov-id">FL2304</td>
+											<td class="sy-details">College English IV</td>
+											<td class="sy-syllabus"><a href="" target="_blank" class="link"></a></td>
 										</tr>
 									</tbody>
-								</table>
+								</table><BR><BR><BR><BR>
 								<!--Syllabus-->
 								</div>
+								
 			  				<!--content-->
 					  	</div>
 					</div>
