--- a/Online Course/ListView.html
+++ b/Online Course/ListView.html
@@ -250,11 +250,76 @@
                                             <tbody>
                                                 <tr class="">
                                                     <td class="no">1</td>
-                                                    <td class="course">--</td>
-                                                    <td class="course-title">--</td>
+                                                    <td class="course">CS3311</td>
+                                                    <td class="course-title">Computer Network</td>
                                                     <td class="course-type">C</td>
-                                                    <td class="homepage">--</td>	
+                                                    <td class="homepage"><a href="Homepage/CS3311.html" target="_blank">CS3311</a></td>	
                                                 </tr>
+
+												<tr class="">
+                                                    <td class="no">2</td>
+                                                    <td class="course">CS2304</td>
+                                                    <td class="course-title">Mathematical Foundations</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/CS2304.html" target="_blank">CS2304</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">3</td>
+                                                    <td class="course">CS5503</td>
+                                                    <td class="course-title">Problem solving and Practice II</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/CS5503.html" target="_blank">CS5503</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">4</td>
+                                                    <td class="course">CS3322</td>
+                                                    <td class="course-title">The Principle of Database Systems</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/CS3322.html" target="_blank">CS3322</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">5</td>
+                                                    <td class="course">CS2308</td>
+                                                    <td class="course-title">Algorithmic Complexity and Design</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/CS2308.html" target="_blank">CS2308</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">6</td>
+                                                    <td class="course">CS3308</td>
+                                                    <td class="course-title">Programming and Machine Learning</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/CS3308.html" target="_blank">CS3308</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">7</td>
+                                                    <td class="course">15-213</td>
+                                                    <td class="course-title">Introduction to Computer System</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/15-213-ICS.html" target="_blank">ICS</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">8</td>
+                                                    <td class="course">MA1203</td>
+                                                    <td class="course-title">Integrated Mathematics</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage"><a href="Homepage/MA1203.html" target="_blank">MA1203</a></td>	
+                                                </tr>
+
+												<tr class="">
+                                                    <td class="no">9</td>
+                                                    <td class="course">FL2304</td>
+                                                    <td class="course-title">College English IV</td>
+                                                    <td class="course-type">C</td>
+                                                    <td class="homepage">Nil</td>	
+                                                </tr>
+
                                             </tbody>
                                         </table>
                                     </div>
