--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -135,10 +135,30 @@
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Lecture Videos</div></div>
 									<div class="layui-card-body">
-										<div class="layui-collapse">
-											<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
-											<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
-										</div>
+										<ul class="link-list">
+												<li class="link-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+														  <div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+														  <div class="grid-demo"><a href="#">链接</a></div>
+														</div>
+													</div>
+												</li>
+
+												<li class="link-list-item">
+													<div class="layui-row">
+														<div class="layui-col-md1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-md11">
+														  <div class="grid-demo"><a href="#">链接</a></div>
+														</div>
+													  </div>
+												</li>
+											</ul>
+										<iframe src="#" style="width: 100%; height: 500px;" ></iframe>
 									</div>
 								</div>
 								<!--HOME-->
@@ -213,6 +233,7 @@
 											<div class="layui-collapse">
 												<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
 												<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
+												<iframe src="Model.html" style="width: 100%; height: 500px;" ></iframe>
 											</div>
 										</div>
 									</div>
