--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -149,14 +149,15 @@
 
 												<li class="link-list-item">
 													<div class="layui-row">
-														<div class="layui-col-md1">
-															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+														<div class="layui-col-xs1">
+														  <div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
 														</div>
-														<div class="layui-col-md11">
+														<div class="layui-col-xs11">
 														  <div class="grid-demo"><a href="#">链接</a></div>
 														</div>
-													  </div>
+													</div>
 												</li>
+
 											</ul>
 										<iframe src="#" style="width: 100%; height: 500px;" ></iframe>
 									</div>
