--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -136,11 +136,17 @@
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Lecture Videos</div></div>
 									<div class="layui-card-body">
 										<ul class="link-list">
-												<li class="link-list-item">
-													<img src="image/链接_link-three.png" class="link-list-img" style="display: inline-block;">
-													<a href="#" style="display: inline-block;">链接</a>
-												</li>
-											</ul>
+											<li class="link-list-item">
+												<div class="layui-row">
+													<div class="layui-col-xs1">
+													  <div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													</div>
+													<div class="layui-col-xs11">
+													  <div class="grid-demo"><a href="#">链接</a></div>
+													</div>
+												</div>
+											</li>
+										</ul>
 										<iframe src="#" style="width: 100%; height: 500px;" ></iframe>
 									</div>
 								</div>
