--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -135,19 +135,43 @@
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Lecture Videos</div></div>
 									<div class="layui-card-body">
+										<!--Linklist-->
 										<ul class="link-list">
+											
 											<li class="link-list-item">
 												<div class="layui-row">
 													<div class="layui-col-xs1">
-													  <div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
 													</div>
 													<div class="layui-col-xs11">
-													  <div class="grid-demo"><a href="#">链接</a></div>
+													  	<div class="grid-demo"><a href="#">Lecture Videos</a></div>
+													</div>
+												</div>
+											</li>
+
+											<li class="link-list-item">
+												<div class="layui-row">
+													<div class="layui-col-xs1">
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													</div>
+													<div class="layui-col-xs11">
+													  	<div class="grid-demo"><a href="#">Resource</a></div>
+													</div>
+												</div>
+											</li>
+
+											<li class="link-list-item">
+												<div class="layui-row">
+													<div class="layui-col-xs1">
+													  	<div class="grid-demo grid-demo-bg1"><img src="image/链接_link-three.png" class="link-list-img"></div>
+													</div>
+													<div class="layui-col-xs11">
+													  	<div class="grid-demo"><a href="#">Resource</a></div>
 													</div>
 												</div>
 											</li>
 										</ul>
-										<iframe src="#" style="width: 100%; height: 500px;" ></iframe>
+										<!--Linklist-->
 									</div>
 								</div>
 								<!--HOME-->
@@ -178,7 +202,32 @@
 								<div class="layui-collapse">
 									<div class="layui-colla-item">
 									  	<div class="layui-colla-title">Chapter 1</div>
-									  	<div class="layui-colla-content"><p>Content 1</p></div>
+									  	<div class="layui-colla-content">
+											<!--Filelist-->
+											<ul class="file-list">
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">File</a></div>
+														</div>
+													</div>
+												</li>
+												<li class="file-list-item">
+													<div class="layui-row">
+														<div class="layui-col-xs1">
+															<div class="grid-demo grid-demo-bg1"><img src="image/链接_link.png" class="link-list-img"></div>
+														</div>
+														<div class="layui-col-xs11">
+															<div class="grid-demo"><a href="#">File</a></div>
+														</div>
+													</div>
+												</li>
+											</ul>
+											<!--Filelist-->
+										</div>
 									</div>
 									<div class="layui-colla-item">
 										<div class="layui-colla-title">Chapter 2</div>
@@ -217,12 +266,10 @@
 								<div class="main-title" id="Resources">Resources</div>	
 								<div class="layui-collapse">
 									<div class="layui-colla-item">
-										<div class="layui-colla-title">Chapter 2</div>
+										<div class="layui-colla-title">Refer to outer website</div>
 										<div class="layui-colla-content">
 											<div class="layui-collapse">
-												<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
-												<div class="layui-colla-item"><div class="layui-colla-title"><a href="" target="_blank">Resources</a></div></div>
-												<iframe src="Model.html" style="width: 100%; height: 500px;" ></iframe>
+												<iframe src="#" class="refer-out-web" ></iframe>
 											</div>
 										</div>
 									</div>
@@ -234,6 +281,20 @@
 					</div>
 					<div class="layui-col-md2">
 					  	<div class="grid-demo">
+							<!--button-ver2-->
+							<ul class="link-list">
+								<li class="btn">
+									<div class="layui-row">
+										<div class="layui-col-xs3">
+											<div class="grid-demo grid-demo-bg1"><img src="image/趋势_trend-two.png" class="btn-img"></div>
+										</div>
+										<div class="layui-col-xs9">
+											<div class="grid-demo"><a href="https://computersciencekaoyan.github.io/Online%20Course/Grades.html">View Course Grades</a></div>
+										</div>
+									</div>
+								</li>
+							</ul>
+							<!--button-ver2-->
 							<div class="sideboard">
 								<div class="sidetitle">calendar</div><hr>
 								<div class="ws-demo-static">
