--- a/Online Course/Grades.html
+++ b/Online Course/Grades.html
@@ -91,42 +91,42 @@
                             <table class="sy-grades"><tbody>
                                 <tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/15-213-ICS.html">Introduction to Computer Systems</a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
                                 <tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS3311.html">Computer Network</a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS2304.html">Mathematical Foundations </a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS5503.html">Problem solving and Practice II </a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS2308.html">Algorithmic Complexity and Design </a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS3322.html">The Principle of Database Systems</a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/CS3308.html">Programming and Machine Learning </a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
 
 								<tr class="grades-layout">
                                     <td class="grades-course"><a href="Homepage/MA1203.html">Integrated Mathematics</a></td>
-                                    <td class="grades-counts">No Grades</td>
+                                    <td class="grades-counts">N/A</td>
                                 </tr>
                             </tbody></table>
 			  				<!--content-->
