--- a/Online Course/Homepage/2022-2023-2.html
+++ b/Online Course/Homepage/2022-2023-2.html
@@ -66,13 +66,12 @@
 			<!-- 内容主体区域 -->
 			<div class="main-content">
 				<div class="layui-row layui-col-space30">
-					<div class="layui-header">
+					<div class="layui-header header">
 						<!-- 头部区域（可配合layui 已有的水平导航） -->
-						<ul class="layui-nav layui-layout-left">
-							<a href="#" id="Homepage-title">UG-(2022-2023-2)-Course Overview</div>
+						<ul class="layui-nav layui-layout-left e-course-title-left">
+							<a href="#" id="Homepage-title">UG-(2022-2023-2)-Course Overview</a>
 						</ul>
 					</div>
-					<hr class="title-line">
 					<div class="layui-col-md11" style="overflow: none;">
 					  	<div class="grid-demo grid-demo-bg1">
 							<!--content-->
