--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="layui-main/dist/css/layui.css" type="text/css">
 	<script src="JS/elem.js" charset="utf-8"></script>
 	<script src="JS/announce.js" charset="utf-8"></script>
+	<script src="JS/print.js" charset="utf-8"></script>
 	<script src="/cdn.staticfile.org/layui/2.8.0/layui.js"></script>
 	<script src="layui-main/dist/layui.js" charset="utf-8"></script>
 </head>
@@ -18,7 +19,7 @@
 	<div class="layui-layout layui-layout-admin">
 		<!--subside-->
 		<div class="layui-side layui-bg-black">
-			<div class="layui-side-scroll">
+			<div class="layui-side-scro9.5">
 			  <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
 			  	<ul class="layui-nav layui-nav-tree" lay-filter="test">
 					<li class="layui-nav-item">
@@ -66,14 +67,13 @@
 			<!-- 内容主体区域 -->
 			<div class="main-content">
 				<div class="layui-row layui-col-space30">
-					<div class="layui-header">
+					<div class="layui-header header">
 						<!-- 头部区域（可配合layui 已有的水平导航） -->
-						<ul class="layui-nav layui-layout-left">
-							<a href="#" id="Homepage-title">UG-(2022-2023-3)-CS5503-Problem solving and Practice II</div>
+						<ul class="layui-nav layui-layout-left e-course-title-left">
+							<a href="#" id="Homepage-title">UG-(2022-2023-3)-CS5503-Problem solving and Practice II</a>
 						</ul>
 					</div>
-					<hr class="title-line">
-					<div class="layui-col-md10" style="overflow: none;">
+					<div class="layui-col-md9" style="overflow: none;">
 					  	<div class="grid-demo grid-demo-bg1">
 							<!--content-->
 							<div class="layui-col-md3">
@@ -91,7 +91,10 @@
 								<div class="layui-col-md8">
 								<!---->
 								<!--HOME-->
-								<div class="main-title" id="home">Problem solving and Practice II</div>	
+								<div class="main-title" id="home">Problem solving and Practice II</div>		
+								
+								<input value='Print' type='button' onclick='handlePrint()' class="btn-ver2"/>
+								
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Overview</div></div>
 									<div class="layui-card-body">
@@ -279,9 +282,10 @@
 			  				<!--content-->
 					  	</div>
 					</div>
-					<div class="layui-col-md2">
+					<div class="layui-col-md3">
 					  	<div class="grid-demo">
-							<!--button-ver2-->
+							<div class="sideboard">
+								<!--button-ver2-->
 							<ul class="link-list">
 								<li class="btn">
 									<div class="layui-row">
@@ -295,7 +299,6 @@
 								</li>
 							</ul>
 							<!--button-ver2-->
-							<div class="sideboard">
 								<div class="sidetitle">calendar</div><hr>
 								<div class="ws-demo-static">
 									<div class="layui-inline" id="ID-laydate-static-2"></div>
