--- a/Online Course/Homepage/Model.html
+++ b/Online Course/Homepage/Model.html
@@ -91,10 +91,14 @@
 								<div class="layui-col-md8">
 								<!---->
 								<!--HOME-->
-								<div class="main-title" id="home">Problem solving and Practice II</div>		
-								
-								<input value='Print' type='button' onclick='handlePrint()' class="btn-ver2"/>
-								
+								<div class="layui-row course-main-title-overall">
+									<div class="layui-col-md9">
+									  <div class="grid-demo grid-demo-bg1"><div class="course-main-title" id="home">Problem solving and Practice II</div></div>
+									</div>
+									<div class="layui-col-md3">
+									  <div class="grid-demo main-title-btn"><input value='Print' type='button' onclick='handlePrint()' class="btn-ver2"/></div>
+									</div>
+								</div>
 								<div class="layui-card">
 									<div class="layui-card-header card-header-CSMIE"><div class="card-title-CSMIE">Overview</div></div>
 									<div class="layui-card-body">
@@ -328,7 +332,7 @@
 				  	</div>
 				</div>
 				<div class="layui-col-md3">
-					<div class="grid-demo grid-demo-bg1">
+					<div class="grid-demo grid-demo-bg1 top">
 						<a href="#top" class="top">Top</a>
 					</div>
 			  </div>
