--- a/Canvas/Homepage/0x00.studentenquiry.html
+++ b/Canvas/Homepage/0x00.studentenquiry.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Student Enquiry</title>
-        <link rel="icon" href="images/CSMIE.ico" type="image/x-icon"/>
+        <link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="CSE-MED">
         <meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
