--- a/Canvas/Homepage/SP1201.html
+++ b/Canvas/Homepage/SP1201.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <title>Chinese Mathematics Competitions</title>
-        <meta http-equiv="pragma" content="no-cache">
+        <link rel="icon" href="images/CSMIE.ico" type="image/x-icon"/>
+		<meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
         <!--自适应屏幕-->
