--- a/Canvas/2022-2023-2.html
+++ b/Canvas/2022-2023-2.html
@@ -176,7 +176,7 @@
 													</tr>
 													
 													<tr >
-													<tr style="background-color:antiquewhite;">
+													<tr style="background-color:#CCFFCC;">
 														<td width="10%"><div align="center">2</div></td>
 														<td width="30%"><div align="center">CS2307</div></td>
 														<td width="30%"><div align="center">Computer Organization</div></td>
@@ -186,7 +186,7 @@
 														</div></td>	
 													</tr>
 													
-													<tr style="background-color:antiquewhite;">
+													<tr style="background-color:#CCFFCC;">
 														<td width="10%"><div align="center">3</div></td>
 														<td width="30%"><div align="center">CS2310</div></td>
 														<td width="30%"><div align="center">Operating Systems</div></td>
