--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -5,7 +5,7 @@
     <head>
 		<link rel="shortcut icon" href="CSE-MED">
         <title>CS2307 Computer Organization</title>
-		<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
+		<link rel="icon" href="images/CSMIE.ico" type="image/x-icon"/>
         <meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
