--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>CS2309 Problem solving and Practice</title>
-		<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
+		<link rel="icon" href="images/CSMIE.ico" type="image/x-icon"/>
         <meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
